<resources>
    <string name="app_name">BenchTest</string>
    <string name="time">试验时间</string>
    <string name="connect">连接电脑</string>
    <string name="disconnect">断开连接</string>
    <string name="Port">端口号</string>
    <string name="IPAddress">IP地址</string>
    <string name="znl">总能量</string>
    <string name="zcdy">总成电压</string>
    <string name="soc">SOC变化量</string>
    <string name="rlpc">允许容量偏差</string>
    <string name="xslc">累计行驶里程(km)</string>
    <string name="scqy">系统生成企业</string>
    <string name="send">发送</string>
    <string name="start">开始试验</string>
    <string name="stop">停止试验</string>

</resources>
